[package]
name = "daytablescore"
version = "0.1.0"
authors = ["Stefan Simon <s.simon@inmed-gmbh.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.8.0", features = ["macros"] }
lazy_static = "1.4.0"
chrono = "0.4.19"
